--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.3",
+    "@clerk/themes": "^2.1.21",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.29",
     "lucide-react": "^0.429.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
